# RWEB_Documentation

./: .gitignore  CMakeLists.txt  README.md  app.cpp  menu.json  test.cpp
include/: HTMLTemplate.h  RWEB.h  Socket.h  Utility.h
res/: base.html  config.json  index.html  postAndCookies.html  style.css  templates.html  utils.html
res/prism/: prism.css  prism.js
src/: HTMLTemplate.cpp  RWEB.cpp  Socket.cpp  Utility.cpp  main.cpp
tests/calc/: test_calc.cpp
tests/template/: CMakeLists.txt  menu.json  test.cpp
tests/template/res/: index.html  result.html
tests/templateBlock/res/: index.html
tests/templateVars/: CMakeLists.txt  menu.json  test.cpp
tests/templateVars/res/: index.html  result.html
tests/template_if/: CMakeLists.txt  menu.json  test.cpp
tests/template_if/res/: index.html  result.html
